comments updates